Updated service name

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Remote education self assessment framework
+        Remote education review framework
       </h1>
       <p>
         This kit lets you rapidly create HTML prototypes of GOV.UK services.
