--- a/app/views/v1/schools/leadership-1.html
+++ b/app/views/v1/schools/leadership-1.html
@@ -15,9 +15,9 @@ Question page
 
     <h1 class="govuk-heading-xl">Leadership</h1>
 
-    <p>School leaders have a clear vision and approach for remote education, and maintain awareness of any issues or barriers related to effective delivery.</p>
+    <!-- <p>School leaders have a clear vision and approach for remote education, and maintain awareness of any issues or barriers related to effective delivery.</p>
+    <br> -->
 
-    <br>
     <form class="form" action="leadership-2" method="post">
 
       <span class="govuk-caption-l">1 of 3</span>
@@ -33,8 +33,6 @@ Question page
           </span>
         </summary>
         <div class="govuk-details__text">
-          <p>The scoring below provides a structure to identify the school's current position in relation to its remote education practice across the 6 categories within the framework. Assessing each category in this way will help school leaders identify areas of strength and those needing further work.</p>
-
             <p><strong>1. Identify</strong><br>
               Not yet in place or there are major gaps.
             </p>
@@ -99,7 +97,7 @@ Question page
   </div>
 
 
-  <div class="govuk-grid-column-one-third">
+  <!-- <div class="govuk-grid-column-one-third">
     <aside class="app-related-items" role="complementary">
       <h2 class="govuk-heading-m" id="subsection-title">
         Return to this later
@@ -109,7 +107,7 @@ Question page
         </a></p>
       <p>To make sure your review and results will not be lost at any time, get a reference code.</p>
     </aside>
-  </div>
+  </div> -->
 
 
 
