--- a/app/views/v1/schools/task-list.html
+++ b/app/views/v1/schools/task-list.html
@@ -16,18 +16,113 @@ Task list
       Remote education review framework
     </h1>
 
-    <p>This framework has been produced to support schools in England to identify the strengths and areas for improvement in their remote education offer, and to signpost them to resources that can help them improve their practice.</p>
 
-    <br><br>
+    <!-- <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
+      <div class="govuk-accordion__section ">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
+              Using the framework
+            </span>
+          </h2>
+        </div>
+        <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
+          <p>You can work through the entire framework to identify strengths and areas for improvement in remote education with your senior leadership team (taking approximately 1 hour to complete as a group), or focus on specific sections that have been previously identified as priorities.</p>
+          <p>The framework will help you to have conversations with all stakeholders within the school community (for example, staff, governors, parents) about remote education provision.</p>
+          <p>The framework can help you meet basic requirements using the resources and tools you currently have (digital or physical), and to take your remote education provision further. School leaders should allocate a score to each statement where possible, identify strengths and areas for improvement, and discuss next steps with members of the SLT and governors. The framework offers suggested actions and links to relevant support depending on scores and any gaps identified.</p>
+          <p>You can use the framework more than once to adopt practical steps and move from the "identifying" stage to the "sustaining" stage: to embed a sustainable strategy for remote education.</p>
+        </div>
+      </div>
+      <div class="govuk-accordion__section ">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
+              Scoring
+            </span>
+          </h2>
+        </div>
+        <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
+          <p>The scoring below provides a structure to identify the school's current position in relation to its remote education practice across the 6 categories within the framework. Assessing each category in this way will help school leaders
+            identify areas of strength and those needing further work.</p>
 
-    <ul class="app-task-list__items no-headings">
+          <p><strong>1. Identify</strong><br>
+            Not yet in place or there are major gaps.
+          </p>
+          <p><strong>2. Develop and plan</strong><br>
+            Identified gaps but a plan is being developed to address them.
+          </p>
+          <p><strong>3. Implement</strong><br>
+            In the process of implementing systems and practices to address this.
+          </p>
+          <p><strong>4. Embed</strong><br>
+            Practices and systems are in place with minor gaps.
+          </p>
+          <p><strong>5. Sustain</strong><br>
+            Practices and systems are fully embedded, and there are examples of best practice.
+          </p>
+
+        </div>
+      </div>
+    </div> -->
+
+
+
+
+    <!-- <details class="govuk-details" data-module="govuk-details">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          Using the framework
+        </span>
+      </summary>
+      <div class="govuk-details__text">
+        <p>You can work through the entire framework to identify strengths and areas for improvement in remote education with your senior leadership team (taking approximately 1 hour to complete as a group), or focus on specific sections that have been previously identified as priorities.</p>
+        <p>The framework will help you to have conversations with all stakeholders within the school community (for example, staff, governors, parents) about remote education provision.</p>
+        <p>The framework can help you meet basic requirements using the resources and tools you currently have (digital or physical), and to take your remote education provision further. School leaders should allocate a score to each statement where possible, identify strengths and areas for improvement, and discuss next steps with members of the SLT and governors. The framework offers suggested actions and links to relevant support depending on scores and any gaps identified.</p>
+        <p>You can use the framework more than once to adopt practical steps and move from the "identifying" stage to the "sustaining" stage: to embed a sustainable strategy for remote education.</p>
+      </div>
+    </details>
+
+    <details class="govuk-details" data-module="govuk-details">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          Scoring
+        </span>
+      </summary>
+      <div class="govuk-details__text">
+        <p>The scoring below provides a structure to identify the school's current position in relation to its remote education practice across the 6 categories within the framework. Assessing each category in this way will help school leaders
+          identify areas of strength and those needing further work.</p>
+
+        <p><strong>1. Identify</strong><br>
+          Not yet in place or there are major gaps.
+        </p>
+        <p><strong>2. Develop and plan</strong><br>
+          Identified gaps but a plan is being developed to address them.
+        </p>
+        <p><strong>3. Implement</strong><br>
+          In the process of implementing systems and practices to address this.
+        </p>
+        <p><strong>4. Embed</strong><br>
+          Practices and systems are in place with minor gaps.
+        </p>
+        <p><strong>5. Sustain</strong><br>
+          Practices and systems are fully embedded, and there are examples of best practice.
+        </p>
+
+      </div>
+    </details> -->
+
+
+    <ul class="app-task-list__items rerf">
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
           <a href="leadership-1" aria-describedby="leadership-status">
             Leadership
           </a>
         </span>
-        <strong class="govuk-tag app-task-list__tag" id="leadership-status">Completed</strong>
+        <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="leadership-status">Not started</strong>
+        <!-- <strong class="govuk-tag app-task-list__tag" id="leadership-status">Completed</strong> -->
+        <br>
+        <p>School leaders have a clear vision and approach for remote education, and maintain awareness of any issues or barriers related to effective delivery.</p>
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
@@ -36,6 +131,8 @@ Task list
           </a>
         </span>
         <strong class="govuk-tag govuk-tag--blue app-task-list__tag" id="recpe-status">In progress</strong>
+        <br>
+        <p>The school understands the remote education context of pupils, and plans its provision to ensure pupils can remain engaged in education.</p>
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
@@ -43,7 +140,10 @@ Task list
             Curriculum planning and delivery
           </a>
         </span>
-        <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="curriculum-status">Not started</strong>
+        <!-- <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="curriculum-status">Not started</strong> -->
+        <strong class="govuk-tag app-task-list__tag" id="Curriculum-status">Completed</strong>
+        <br>
+        <p>The school has well-sequenced curricula that support ‘hybrid’ teaching, and has the relevant resources in place to deliver the curriculum remotely.</p>
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
@@ -52,6 +152,8 @@ Task list
           </a>
         </span>
         <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="capacity-status">Not started</strong>
+        <br>
+        <p>Schools support staff to deliver high-quality remote education.</p>
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
@@ -59,7 +161,10 @@ Task list
             Communication
           </a>
         </span>
-        <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="communication-status">Not started</strong>
+        <!-- <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="communication-status">Not started</strong> -->
+        <strong class="govuk-tag app-task-list__tag" id="communication-status">Completed</strong>
+        <br>
+        <p>The school maintains strong communication with pupils, parents and carers, and continues to work effectively with other third parties.</p>
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
@@ -68,6 +173,8 @@ Task list
           </a>
         </span>
         <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="safeguarding-status">Not started</strong>
+        <br>
+        <p>Teachers and leaders understand how to maintain effective safeguarding arrangements whilst also providing high-quality remote education and supporting pupil wellbeing.</p>
       </li>
     </ul>
 
@@ -81,7 +188,7 @@ Task list
       </h2>
       <nav role="navigation" aria-labelledby="subsection-title">
         <ul class="govuk-list govuk-!-font-size-16">
-          <li>
+          <!-- <li>
             <a href="#">
               Aims of the framework
             </a>
@@ -90,14 +197,14 @@ Task list
             <a href="#">
               Why schools need the framework
             </a>
-          </li>
+          </li> -->
           <li>
-            <a href="#">
+            <a href="using-the-framework">
               Using the framework
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="scoring">
               Scoring
             </a>
           </li>
@@ -105,13 +212,24 @@ Task list
       </nav>
     </aside>
     <aside class="app-related-items" role="complementary">
-      <h2 class="govuk-heading-m" id="subsection-title">
+      <!-- <h2 class="govuk-heading-m" id="subsection-title">
         Return to this later
-      </h2>
-      <p><a href="#">
-          Save my progress
-        </a></p>
-      <p>To make sure your review and results will not be lost at any time, get a reference code.</p>
+      </h2> -->
+      <nav role="navigation" aria-labelledby="subsection-title">
+        <ul class="govuk-list govuk-!-font-size-16">
+          <li>
+            <a href="#">
+              View your task list
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              View your results
+            </a>
+            <span>[would only be shown once at least one section has been completed]</span>
+          </li>
+        </ul>
+      </nav>
     </aside>
   </div>
 
