--- a/app/views/v1/sector.html
+++ b/app/views/v1/sector.html
@@ -19,28 +19,29 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Which sector is your organisation in?
+                At which educational stage do you work?
               </h1>
-            </legend>
+            </legend
+            <br><br>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="which-sector" name="which-sector" type="radio" value="schools">
                 <label class="govuk-label govuk-radios__label" for="which-sector">
-                  Schools
+                  primary and secondary education
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="which-sector-2" name="which-sector" type="radio" value="fe">
                 <label class="govuk-label govuk-radios__label" for="which-sector-2">
-                  Further Education
+                  further education
                 </label>
               </div>
             </div>
-
+            <br><br>
           </fieldset>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
       </form>
 
