--- a/app/views/v1/schools/leadership-3.html
+++ b/app/views/v1/schools/leadership-3.html
@@ -38,9 +38,6 @@ Question page
           </span>
         </summary>
         <div class="govuk-details__text">
-          <p>The scoring below provides a structure to identify the school's current position in relation to its remote education practice across the 6 categories within the framework. Assessing each category in this way will help school leaders
-            identify areas of strength and those needing further work.</p>
-
           <p><strong>1. Identify</strong><br>
             Not yet in place or there are major gaps.
           </p>
@@ -105,7 +102,7 @@ Question page
   </div>
 
 
-  <div class="govuk-grid-column-one-third">
+  <!-- <div class="govuk-grid-column-one-third">
     <aside class="app-related-items" role="complementary">
       <h2 class="govuk-heading-m" id="subsection-title">
         Return to this later
@@ -115,7 +112,7 @@ Question page
         </a></p>
       <p>To make sure your review and results will not be lost at any time, get a reference code.</p>
     </aside>
-  </div>
+  </div> -->
 
 
 
