--- a/app/views/v1/schools/recommendations.html
+++ b/app/views/v1/schools/recommendations.html
@@ -13,9 +13,13 @@ Question page
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">Check your answers</h1>
+    <h1 class="govuk-heading-xl">Your recommendations</h1>
 
-    <h2 class="govuk-heading-l">Leadership</h2>
+    <p>Based on the scores you have given so far, here are some recommendations for you to consider.</p>
+
+
+
+    <!-- <h2 class="govuk-heading-l">Leadership</h2>
 
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9 rubric-answers">
@@ -63,9 +67,8 @@ Question page
       </div>
     </dl>
 
-    <p>If you're happy that the score you have given .... ..... you can continue and get recommendations</p>
 
-    <form action="recommendations" method="post" novalidate>
+    <form action="/confirmation" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
@@ -73,7 +76,7 @@ Question page
         Get recommendations
       </button>
 
-    </form>
+    </form> -->
 
 
 
@@ -83,12 +86,39 @@ Question page
   <!-- <div class="govuk-grid-column-one-third">
     <aside class="app-related-items" role="complementary">
       <h2 class="govuk-heading-m" id="subsection-title">
-        Return to this later
+        About the framework
       </h2>
-      <p><a href="#">
-          Save my progress
-        </a></p>
-      <p>To make sure your review and results will not be lost at any time, get a reference code.</p>
+      <nav role="navigation" aria-labelledby="subsection-title">
+        <ul class="govuk-list govuk-!-font-size-16">
+          <li>
+            <a href="using-the-framework">
+              Using the framework
+            </a>
+          </li>
+          <li>
+            <a href="scoring">
+              Scoring
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+    <aside class="app-related-items" role="complementary">
+      <nav role="navigation" aria-labelledby="subsection-title">
+        <ul class="govuk-list govuk-!-font-size-16">
+          <li>
+            <a href="#">
+              View your task list
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              View your results
+            </a>
+            <span>[would only be shown once at least one section has been completed]</span>
+          </li>
+        </ul>
+      </nav>
     </aside>
   </div> -->
 
