WIP on Schools journey

--- a/app/views/v1/schools/task-list.html
+++ b/app/views/v1/schools/task-list.html
@@ -212,19 +212,19 @@ Task list
       </nav>
     </aside>
     <aside class="app-related-items" role="complementary">
-      <!-- <h2 class="govuk-heading-m" id="subsection-title">
-        Return to this later
-      </h2> -->
+      <h2 class="govuk-heading-m" id="subsection-title">
+        Your framework
+      </h2>
       <nav role="navigation" aria-labelledby="subsection-title">
         <ul class="govuk-list govuk-!-font-size-16">
           <li>
-            <a href="#">
+            <a href="task-list">
               View your task list
             </a>
           </li>
           <li>
-            <a href="#">
-              View your results
+            <a href="recommendations">
+              View your recommendations
             </a>
             <span>[would only be shown once at least one section has been completed]</span>
           </li>
