--- a/app/views/v1/schools/using-the-framework.html
+++ b/app/views/v1/schools/using-the-framework.html
@@ -52,7 +52,7 @@ Task list
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="scoring">
               Scoring
             </a>
           </li>
