--- a/app/views/v1/schools/scoring.html
+++ b/app/views/v1/schools/scoring.html
@@ -66,7 +66,7 @@ Task list
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="scoring">
               Scoring
             </a>
           </li>
