WIP on Schools journey

--- a/app/views/v1/schools/leadership-3.html
+++ b/app/views/v1/schools/leadership-3.html
@@ -15,7 +15,7 @@ Question page
 
     <h1 class="govuk-heading-xl">Leadership</h1>
 
-    <p>School leaders have a clear vision and approach for remote education, and maintain awareness of any issues or barriers related to effective delivery.</p>
+    <!-- <p>School leaders have a clear vision and approach for remote education, and maintain awareness of any issues or barriers related to effective delivery.</p> -->
 
     <br>
     <form class="form" action="leadership-answers" method="post">
