--- a/app/views/v1/schools/task-list.html
+++ b/app/views/v1/schools/task-list.html
@@ -126,7 +126,7 @@ Task list
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
-          <a href="#" aria-describedby="recpe-status">
+          <a href="recpe-1" aria-describedby="recpe-status">
             Remote education context and pupil engagement
           </a>
         </span>
