--- a/app/views/v1/schools/task-list.html
+++ b/app/views/v1/schools/task-list.html
@@ -17,101 +17,6 @@ Task list
     </h1>
 
 
-    <!-- <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-      <div class="govuk-accordion__section ">
-        <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-            <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-              Using the framework
-            </span>
-          </h2>
-        </div>
-        <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
-          <p>You can work through the entire framework to identify strengths and areas for improvement in remote education with your senior leadership team (taking approximately 1 hour to complete as a group), or focus on specific sections that have been previously identified as priorities.</p>
-          <p>The framework will help you to have conversations with all stakeholders within the school community (for example, staff, governors, parents) about remote education provision.</p>
-          <p>The framework can help you meet basic requirements using the resources and tools you currently have (digital or physical), and to take your remote education provision further. School leaders should allocate a score to each statement where possible, identify strengths and areas for improvement, and discuss next steps with members of the SLT and governors. The framework offers suggested actions and links to relevant support depending on scores and any gaps identified.</p>
-          <p>You can use the framework more than once to adopt practical steps and move from the "identifying" stage to the "sustaining" stage: to embed a sustainable strategy for remote education.</p>
-        </div>
-      </div>
-      <div class="govuk-accordion__section ">
-        <div class="govuk-accordion__section-header">
-          <h2 class="govuk-accordion__section-heading">
-            <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
-              Scoring
-            </span>
-          </h2>
-        </div>
-        <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
-          <p>The scoring below provides a structure to identify the school's current position in relation to its remote education practice across the 6 categories within the framework. Assessing each category in this way will help school leaders
-            identify areas of strength and those needing further work.</p>
-
-          <p><strong>1. Identify</strong><br>
-            Not yet in place or there are major gaps.
-          </p>
-          <p><strong>2. Develop and plan</strong><br>
-            Identified gaps but a plan is being developed to address them.
-          </p>
-          <p><strong>3. Implement</strong><br>
-            In the process of implementing systems and practices to address this.
-          </p>
-          <p><strong>4. Embed</strong><br>
-            Practices and systems are in place with minor gaps.
-          </p>
-          <p><strong>5. Sustain</strong><br>
-            Practices and systems are fully embedded, and there are examples of best practice.
-          </p>
-
-        </div>
-      </div>
-    </div> -->
-
-
-
-
-    <!-- <details class="govuk-details" data-module="govuk-details">
-      <summary class="govuk-details__summary">
-        <span class="govuk-details__summary-text">
-          Using the framework
-        </span>
-      </summary>
-      <div class="govuk-details__text">
-        <p>You can work through the entire framework to identify strengths and areas for improvement in remote education with your senior leadership team (taking approximately 1 hour to complete as a group), or focus on specific sections that have been previously identified as priorities.</p>
-        <p>The framework will help you to have conversations with all stakeholders within the school community (for example, staff, governors, parents) about remote education provision.</p>
-        <p>The framework can help you meet basic requirements using the resources and tools you currently have (digital or physical), and to take your remote education provision further. School leaders should allocate a score to each statement where possible, identify strengths and areas for improvement, and discuss next steps with members of the SLT and governors. The framework offers suggested actions and links to relevant support depending on scores and any gaps identified.</p>
-        <p>You can use the framework more than once to adopt practical steps and move from the "identifying" stage to the "sustaining" stage: to embed a sustainable strategy for remote education.</p>
-      </div>
-    </details>
-
-    <details class="govuk-details" data-module="govuk-details">
-      <summary class="govuk-details__summary">
-        <span class="govuk-details__summary-text">
-          Scoring
-        </span>
-      </summary>
-      <div class="govuk-details__text">
-        <p>The scoring below provides a structure to identify the school's current position in relation to its remote education practice across the 6 categories within the framework. Assessing each category in this way will help school leaders
-          identify areas of strength and those needing further work.</p>
-
-        <p><strong>1. Identify</strong><br>
-          Not yet in place or there are major gaps.
-        </p>
-        <p><strong>2. Develop and plan</strong><br>
-          Identified gaps but a plan is being developed to address them.
-        </p>
-        <p><strong>3. Implement</strong><br>
-          In the process of implementing systems and practices to address this.
-        </p>
-        <p><strong>4. Embed</strong><br>
-          Practices and systems are in place with minor gaps.
-        </p>
-        <p><strong>5. Sustain</strong><br>
-          Practices and systems are fully embedded, and there are examples of best practice.
-        </p>
-
-      </div>
-    </details> -->
-
-
     <ul class="app-task-list__items rerf">
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
@@ -136,7 +41,7 @@ Task list
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
-          <a href="#" aria-describedby="curriculum-status">
+          <a href="curriculum-1" aria-describedby="curriculum-status">
             Curriculum planning and delivery
           </a>
         </span>
