Added remaining questions/statements for Schools

--- a/app/views/v1/schools/task-list.html
+++ b/app/views/v1/schools/task-list.html
@@ -52,7 +52,7 @@ Task list
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
-          <a href="#" aria-describedby="capacity-status">
+          <a href="capacity-1" aria-describedby="capacity-status">
             Capacity and capability
           </a>
         </span>
@@ -62,7 +62,7 @@ Task list
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
-          <a href="#" aria-describedby="communication-status">
+          <a href="communication-1" aria-describedby="communication-status">
             Communication
           </a>
         </span>
@@ -73,7 +73,7 @@ Task list
       </li>
       <li class="app-task-list__item">
         <span class="app-task-list__task-name">
-          <a href="#" aria-describedby="safeguarding-status">
+          <a href="safeguarding-1" aria-describedby="safeguarding-status">
             Safeguarding and wellbeing
           </a>
         </span>
