--- a/app/views/v1/schools/recommendations.html
+++ b/app/views/v1/schools/recommendations.html
@@ -15,7 +15,7 @@ Question page
 
     <h1 class="govuk-heading-xl">Your recommendations</h1>
 
-    <p>Based on the scores you have given so far, here are some recommendations for you to consider.</p>
+    <p>Based on the scores you have given so far, you could consider the following recommendations to improve your remote education provision.</p>
 
     <p><a href="#">Printable version</a></p>
 
