--- a/app/views/v1/schools/recpe-answers.html
+++ b/app/views/v1/schools/recpe-answers.html
@@ -91,7 +91,7 @@ Question page
       </div>
     </dl>
 
-    <p>If you're happy that the score you have given .... ..... you can continue and get recommendations</p>
+    <p>Once you're happy with your scores, you can get recommendations on how to improve your remote education provision.</p>
     <br>
 
     <form action="recommendations" method="post" novalidate>
@@ -105,24 +105,7 @@ Question page
     </form>
 
 
-
   </div>
-
-
-  <!-- <div class="govuk-grid-column-one-third">
-    <aside class="app-related-items" role="complementary">
-      <h2 class="govuk-heading-m" id="subsection-title">
-        Return to this later
-      </h2>
-      <p><a href="#">
-          Save my progress
-        </a></p>
-      <p>To make sure your review and results will not be lost at any time, get a reference code.</p>
-    </aside>
-  </div> -->
-
-
-
 
 </div>
 
